Modification du fichier index.html : ajout d'un commentaire

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	</head>
 
 
+<!-- J AJOUTE UN COMMENTAIRE QUI PRESENTE LE FICHIER  -->
+<!-- CE FICHIER SERT A AFFICHER UNE PAGE INTERNET !!   -->
+
 	<body>
       <section id="deco_laterale">  <!-- liseré gauche -->
         <p>M <br/> O <br/> N </p>
